--- a/style.css
+++ b/style.css
@@ -247,3 +247,19 @@ header {
 	border: none;
 	box-shadow: 0px 0px 13px #2b2b2b;
 }
+
+.saved-message {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	height: 50px;
+	color: white;
+	box-shadow: 0px 0px 13px #2b2b2b;
+	border-top: 1px solid rgb(41, 243, 41);
+	border-bottom: 1px solid rgb(41, 243, 41);
+	display: none;
+}
+
+.close {
+	cursor: pointer;
+}
